--- a/octoprint_snap/templates/snap_settings.jinja2
+++ b/octoprint_snap/templates/snap_settings.jinja2
@@ -1,14 +1,26 @@
 <form class="form-horizontal">
     <div class="control-group">
+        <label class="control-label">{{ _('Webhook Url') }}</label>
+        <div class="controls">
+            <input type="text" class="input-block-level" data-bind="value: settings.plugins.snap.webhook_url">
+        </div>
+    </div>
+    <div class="control-group">
         <label class="control-label">{{ _('Access Key ID') }}</label>
         <div class="controls">
             <input type="text" class="input-block-level" data-bind="value: settings.plugins.snap.iam_access_key_id">
         </div>
     </div>
     <div class="control-group">
-        <label class="control-label">{{ _('Secret Access Key here') }}</label>
+        <label class="control-label">{{ _('Secret Access Key') }}</label>
         <div class="controls">
             <input type="text" class="input-block-level" data-bind="value: settings.plugins.snap.iam_secret_access_key">
+        </div>
+    </div>
+    <div class="control-group">
+        <label class="control-label">{{ _('s3 Bucket') }}</label>
+        <div class="controls">
+            <input type="text" class="input-block-level" data-bind="value: settings.plugins.snap.s3_bucket_name">
         </div>
     </div>
     <div class="control-group">
